# easy-bigquery

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test_prod.yml
docs/: context.md  index.md
docs/api/: connector.md
docs/api/workers/: fetch.md  push.md
docs/connector/: connector.md
docs/context/: context.md
docs/workers/: fetcher.md  pusher.md
easy_bigquery/connector/: connector.py
easy_bigquery/context/: manager.py
easy_bigquery/core/: config.py
easy_bigquery/logger/: manager.py
easy_bigquery/workers/: fetcher.py  pusher.py
secrets/: .env.example
tests/: conftest.py
tests/connector/: test_connector.py
tests/context/: test_manager.py
tests/workers/: test_fetcher.py  test_pusher.py
