[project]
name = "easy-bigquery"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreAmorim05",email = "js.andreamorim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-decouple (>=3.8,<4.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "google-cloud-bigquery (>=3.31.0,<4.0.0)",
    "db-dtypes (>=1.4.2,<2.0.0)",
    "google-cloud-bigquery-storage (>=2.31.0,<3.0.0)",
    "pandas-gbq (>=0.29.0,<0.30.0)",
    "loguru (>=0.7.3,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"
pytest-mock = "^3.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.12"
mkdocs-macros-plugin = "^1.3.7"
jinja2 = "^3.1.6"

[tools.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=easy_bigquery -vv"
post_test = "coverage html"
